@@ -1,3 +1,8 @@
+836.	[bug]		fdupont
+	Moved duplicated getXXXHashAlgorithm() function to new
+	xxx_common.h include files in the cryptolink library.
+	(Trac #3471, git xxx)
+
 835.	[build]		fdupont
 	The configure script checks if OpenSSL supports SHA-2, in order
 	to avoid very old (and likely subject to unfixed security bugs)
